TPU support, better result

--- a/flowers_objax.ipynb
+++ b/flowers_objax.ipynb
@@ -11,14 +11,14 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "GPU"
+    "accelerator": "TPU"
   },
   "cells": [
     {
       "cell_type": "code",
       "metadata": {
         "id": "094Kz02rM5WC",
-        "outputId": "e0eeb31a-5765-4fa4-e161-a781a1943ea0",
+        "outputId": "b1c238f0-7bb5-4a40-ea0b-b2710f5c0524",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 751
@@ -44,32 +44,32 @@
             "  Downloading https://files.pythonhosted.org/packages/ba/6b/73dfed0ab5299070cf98451af50130989901f50de41fe85d605437a0210f/parameterized-0.7.4-py2.py3-none-any.whl\n",
             "Requirement already satisfied: absl-py in /usr/local/lib/python3.6/dist-packages (from jaxlib->objax) (0.10.0)\n",
             "Requirement already satisfied: opt-einsum in /usr/local/lib/python3.6/dist-packages (from jax->objax) (3.3.0)\n",
-            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (3.2.2)\n",
-            "Requirement already satisfied: wheel>=0.26; python_version >= \"3\" in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (0.35.1)\n",
-            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (1.0.1)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (1.15.0)\n",
-            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (50.3.0)\n",
-            "Requirement already satisfied: protobuf>=3.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (3.12.4)\n",
-            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (0.4.1)\n",
             "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (2.23.0)\n",
+            "Requirement already satisfied: wheel>=0.26; python_version >= \"3\" in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (0.35.1)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (50.3.0)\n",
             "Requirement already satisfied: google-auth<2,>=1.6.3 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (1.17.2)\n",
+            "Requirement already satisfied: protobuf>=3.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (3.12.4)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (1.0.1)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (0.4.1)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (3.2.2)\n",
             "Requirement already satisfied: grpcio>=1.24.3 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (1.32.0)\n",
             "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (1.7.0)\n",
-            "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /usr/local/lib/python3.6/dist-packages (from markdown>=2.6.8->tensorboard>=2.3.0->objax) (1.7.0)\n",
-            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.3.0->objax) (1.3.0)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard>=2.3.0->objax) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard>=2.3.0->objax) (2020.6.20)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard>=2.3.0->objax) (2.10)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard>=2.3.0->objax) (1.15.0)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard>=2.3.0->objax) (1.24.3)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard>=2.3.0->objax) (0.2.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard>=2.3.0->objax) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard>=2.3.0->objax) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard>=2.3.0->objax) (2020.6.20)\n",
             "Requirement already satisfied: rsa<5,>=3.1.4; python_version >= \"3\" in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard>=2.3.0->objax) (4.6)\n",
             "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard>=2.3.0->objax) (4.1.1)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.6/dist-packages (from importlib-metadata; python_version < \"3.8\"->markdown>=2.6.8->tensorboard>=2.3.0->objax) (3.1.0)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard>=2.3.0->objax) (0.2.8)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.3.0->objax) (1.3.0)\n",
+            "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /usr/local/lib/python3.6/dist-packages (from markdown>=2.6.8->tensorboard>=2.3.0->objax) (1.7.0)\n",
+            "Requirement already satisfied: pyasn1>=0.1.3 in /usr/local/lib/python3.6/dist-packages (from rsa<5,>=3.1.4; python_version >= \"3\"->google-auth<2,>=1.6.3->tensorboard>=2.3.0->objax) (0.4.8)\n",
             "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.3.0->objax) (3.1.0)\n",
-            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.6/dist-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard>=2.3.0->objax) (0.4.8)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.6/dist-packages (from importlib-metadata; python_version < \"3.8\"->markdown>=2.6.8->tensorboard>=2.3.0->objax) (3.1.0)\n",
             "Building wheels for collected packages: objax\n",
             "  Building wheel for objax (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for objax: filename=objax-1.0.2-cp36-none-any.whl size=57983 sha256=79f2dbb570d0e60ba9bed9da3efb2c612710b6613ec978edfe658efb907fbc81\n",
+            "  Created wheel for objax: filename=objax-1.0.2-cp36-none-any.whl size=57983 sha256=ae7e201dae509b80a46594aa17967ac16ebd5fa7303ea33c077bd89bdd1b1bfc\n",
             "  Stored in directory: /root/.cache/pip/wheels/a0/73/a8/df38d6aa0448d888b2111d2493e6aaf6b6320289250c83e891\n",
             "Successfully built objax\n",
             "Installing collected packages: parameterized, objax\n",
@@ -138,7 +138,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xf3_qHXGQQoO",
-        "outputId": "a1528286-e16f-4faa-d45a-04a960bf30b0",
+        "outputId": "7367f7e9-0339-4415-953f-5a77aa0a9bf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -275,7 +275,7 @@
         "test_elements = get_training_dataset(load_dataset(test_names),do_aug=False).take(64 * 6)\n",
         "test_iter = test_elements.as_numpy_iterator()"
       ],
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -348,6 +348,7 @@
         "        return num_correct\n",
         "\n",
         "    def run_eval(self):\n",
+        "        print(\"eval:\")\n",
         "        \"\"\"Runs evaluation and returns top-1 accuracy.\"\"\"\n",
         "        correct_pred = 0\n",
         "        total_examples = 0\n",
@@ -452,53 +453,100 @@
         "            print('    Training took %.1f seconds, eval took %.1f seconds'\n",
         "                  % (elapsed_train_time, elapsed_eval_time), flush=True)"
       ],
-      "execution_count": 37,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t3_-8Bx5NkCp",
-        "outputId": "fe24d41c-f6f2-4490-8b54-517f808258ac",
+        "id": "MhjqXbTRh8es",
+        "outputId": "6bc82c7b-45c2-4911-debb-4dffc88077b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 442
+          "height": 34
+        }
+      },
+      "source": [
+        "### Optional cell - activate TPU backend\n",
+        "import requests\n",
+        "import os\n",
+        "if 'TPU_DRIVER_MODE' not in globals():\n",
+        "  url = 'http://' + os.environ['COLAB_TPU_ADDR'].split(':')[0] + ':8475/requestversion/tpu_driver0.1-dev20191206'\n",
+        "  resp = requests.post(url)\n",
+        "  TPU_DRIVER_MODE = 1\n",
+        "\n",
+        "# The following is required to use TPU Driver as JAX's backend.\n",
+        "from jax.config import config\n",
+        "config.FLAGS.jax_xla_backend = \"tpu_driver\"\n",
+        "config.FLAGS.jax_backend_target = \"grpc://\" + os.environ['COLAB_TPU_ADDR']\n",
+        "print(config.FLAGS.jax_backend_target)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "grpc://10.7.42.194:8470\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t3_-8Bx5NkCp",
+        "outputId": "701b6e11-4d5c-4851-a368-e336d407c91a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 629
         }
       },
       "source": [
         "experiment = Experiment()\n",
         "experiment.train_and_eval()"
       ],
-      "execution_count": 38,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Resuming from ckpt/0000001000.npz\n",
+            "Running training steps 1 - 1000\n",
+            "eval:\n",
+            "Step 1000 -- Epoch 10.00 -- Loss 4.05  Accuracy 1.01\n",
+            "    Training took 590.5 seconds, eval took 193.4 seconds\n",
             "Running training steps 1001 - 2000\n",
-            "Step 2000 -- Epoch 20.00 -- Loss 3.20  Accuracy 16.52\n",
-            "    Training took 175.2 seconds, eval took 49.3 seconds\n",
+            "eval:\n",
+            "Step 2000 -- Epoch 20.00 -- Loss 2.86  Accuracy 7.84\n",
+            "    Training took 577.7 seconds, eval took 186.2 seconds\n",
             "Running training steps 2001 - 3000\n",
-            "Step 3000 -- Epoch 30.00 -- Loss 2.27  Accuracy 39.98\n",
-            "    Training took 163.3 seconds, eval took 50.4 seconds\n",
+            "eval:\n",
+            "Step 3000 -- Epoch 30.00 -- Loss 2.10  Accuracy 34.55\n",
+            "    Training took 582.6 seconds, eval took 185.4 seconds\n",
             "Running training steps 3001 - 4000\n",
-            "Step 4000 -- Epoch 40.00 -- Loss 2.09  Accuracy 66.24\n",
-            "    Training took 163.1 seconds, eval took 50.2 seconds\n",
+            "eval:\n",
+            "Step 4000 -- Epoch 40.00 -- Loss 1.30  Accuracy 61.31\n",
+            "    Training took 583.7 seconds, eval took 187.2 seconds\n",
             "Running training steps 4001 - 5000\n",
-            "Step 5000 -- Epoch 50.00 -- Loss 2.09  Accuracy 67.89\n",
-            "    Training took 163.3 seconds, eval took 49.8 seconds\n",
+            "eval:\n",
+            "Step 5000 -- Epoch 50.00 -- Loss 1.22  Accuracy 60.05\n",
+            "    Training took 585.2 seconds, eval took 185.6 seconds\n",
             "Running training steps 5001 - 6000\n",
-            "Step 6000 -- Epoch 60.00 -- Loss 2.07  Accuracy 68.42\n",
-            "    Training took 164.3 seconds, eval took 49.7 seconds\n",
+            "eval:\n",
+            "Step 6000 -- Epoch 60.00 -- Loss 1.19  Accuracy 61.80\n",
+            "    Training took 583.4 seconds, eval took 185.3 seconds\n",
             "Running training steps 6001 - 7000\n",
-            "Step 7000 -- Epoch 70.00 -- Loss 2.05  Accuracy 68.54\n",
-            "    Training took 164.2 seconds, eval took 48.9 seconds\n",
+            "eval:\n",
+            "Step 7000 -- Epoch 70.00 -- Loss 1.15  Accuracy 69.16\n",
+            "    Training took 588.4 seconds, eval took 186.2 seconds\n",
             "Running training steps 7001 - 8000\n",
-            "Step 8000 -- Epoch 80.00 -- Loss 2.05  Accuracy 68.83\n",
-            "    Training took 163.5 seconds, eval took 48.7 seconds\n",
+            "eval:\n",
+            "Step 8000 -- Epoch 80.00 -- Loss 1.14  Accuracy 70.18\n",
+            "    Training took 587.7 seconds, eval took 185.6 seconds\n",
             "Running training steps 8001 - 9000\n",
-            "Step 9000 -- Epoch 90.00 -- Loss 2.06  Accuracy 68.97\n",
-            "    Training took 163.4 seconds, eval took 49.5 seconds\n"
+            "eval:\n",
+            "Step 9000 -- Epoch 90.00 -- Loss 1.14  Accuracy 70.42\n",
+            "    Training took 584.6 seconds, eval took 184.2 seconds\n"
           ],
           "name": "stdout"
         }
